Updated styles and added the days to the cards

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./favicon_sun.png" />
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -31,8 +31,14 @@
   </head>
   <style>
     .entry {
-      background-image: url('./public/cloud.jpeg');
+      background-image: url('./cloud.jpeg');
+      background-size: cover;
     }
+
+    .button.two {
+      background-color: #DCE0E0;
+    }
+
     </style>
   <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -46,7 +52,7 @@
               <a class="button" href="https://github.com/jmorales22/weather-app" target="_blank"> 
                 <strong>GitHub</img></strong>
               </a>
-              <a class="button is-white" href='https://www.linkedin.com/in/jennifer-morales22/' target="_blank">
+              <a class="button two" href='https://www.linkedin.com/in/jennifer-morales22/' target="_blank">
                 <img src="linkedin.png" alt="Linkedin logo"/>
               </a>
             </div>
